# qaguru_autotest_lesson_18

./: .gitignore  README.md  pyproject.toml
src/utils/: attachments.py
tests/: conftest.py  test_be_log_in.py  test_demowebshop.py
