[project]
name = "qaguru-autotest-lesson-18"
version = "0.1.0"
description = ""
authors = [
    {name = "Viacheslav Suchkov",email = "iexploudi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "selene==2.0.0rc9"
]

[tool.poetry]
packages = [{include = "qaguru_autotest_lesson_18", from = "src"}]

[tool.pytest.ini_options]
addopts = [
    "-v",                         # Подробный вывод
    "--durations=10",             # Показать медленные тесты
    "--alluredir=allure-results", # Папка для отчётов Allure
    "--clean-alluredir",          # Очистить папку перед запуском
]

[tool.allure]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
